--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
 .container{
     width:30vw;
     height: 100vh;
+
     margin: 10px auto;
 }
 
@@ -37,6 +38,7 @@ body{
     font-family: monospace;
     text-align: center;
     text-transform: uppercase;
+    font-weight: bold;
 }
 
 .red{
@@ -49,4 +51,8 @@ body{
 
 .yellow{
     background-color: yellow;
+}
+
+.yellow h2{
+    color: green;
 }
