--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Common */
+
 *{
     margin: 0;
     padding: 0;
@@ -9,12 +11,34 @@ body{
 }
 
 .container{
-    width:30vw;
+    width:23vw;
     height: 100vh;
-
     margin: 10px auto;
 }
 
+/* Number */
+.number{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.number>a{
+    width: 30px;
+    height: 30px;
+    color: black;
+    background-color: white;
+    font-weight: bold;
+    padding: 10px;
+    font-size: 10px;
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+    font-family: fantasy;
+    text-decoration: none;
+}
+
+/* Content */
 .content{
     height: 33.3%;
     position: relative;
