--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
     border-radius: 50%;
     display: inline-block;
     text-align: center;
-    font-family: fantasy;
+    font-family: 'Rubik Mono One', sans-serif;
     text-decoration: none;
 }
 
