--- a/css/style.css
+++ b/css/style.css
@@ -6,19 +6,22 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Rubik Mono One', sans-serif;
 }
 
-.container{
-    margin: 2% 20%;
-}
+
 
 /* Number */
 .number{
-    position: absolute;
+    position: fixed;
     top: 10px;
     right: 10px;
+    z-index: 1;
 }
 
 .number>a{
